@@ -6,7 +6,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -14,21 +13,41 @@ public class CorsConfig {
 
     @Bean
     public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
         CorsConfiguration config = new CorsConfiguration();
 
+        // 🔐 Required when using cookies / auth headers
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("https://taaran.app"));
 
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // ✅ Production-safe (works behind nginx / proxies)
+        config.setAllowedOriginPatterns(List.of(
+                "https://taaran.app",
+                "https://www.taaran.app"));
+
+        // 🧾 Allow all headers from frontend
+        config.setAllowedHeaders(List.of("*"));
+
+        // 🔓 Allow common HTTP methods
+        config.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "OPTIONS",
+                "PATCH"));
+
+        // 📤 (Optional but recommended)
+        config.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Type"));
+
+        // ⏱ Cache preflight response (seconds)
+        config.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 
         source.registerCorsConfiguration("/**", config);
+
         return new CorsFilter(source);
     }
 }
-
-
-
-
-
